--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "lucide-react": "^0.311.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
